@@ -1,3 +1,9 @@
+2018-01-11  Hristian Kirtchev  <kirtchev@adacore.com>
+
+	* sem_res.adb (Uses_SS): A controlled type requires the secondary stack
+	if it contains at least one component declaration employing a function
+	call returning on the secondary stack.
+
 2018-01-11  Yannick Moy  <moy@adacore.com>
 
 	* doc/gnat_rm/standard_and_implementation_defined_restrictions.rst:
